# miniscience-4th-term

./: 3DBenchy.stl  CMakeLists.txt  bolt_25x8_socket.stl  sample05.cpp  sample06.cpp  sample07.cpp  thorsurface.stl
